Fix spacing on mobile and desktop

--- a/src/app/[locale]/page.module.css
+++ b/src/app/[locale]/page.module.css
@@ -16,31 +16,38 @@
 }
 
 main.contentContainer {
-    padding: 0 1rem;
+  padding: 0 1rem;
 }
+
 div.content {
-    max-width: 500px;
-    margin: 5rem auto 1rem auto;
-    ul {
-        list-style-type: none;
-    }
+  max-width: 500px;
+  margin: 5rem auto 1rem auto;
+  ul {
+    list-style-type: none;
+  }
+}
+
+@media (max-width: 768px) {
+  div.content {
+    margin: 1rem auto;
+  }
 }
 
 section.intro {
-    margin-bottom: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;   
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .name {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .title {
-    opacity: 0.6;
+  opacity: 0.6;
 }
 
 p.not_found_return_home {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
